-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0-beta2
-
None
-
Rocky Linux 8
QtCreator 10 beta 2
CMake 3.25.2
-
15e1a6476 (10.0)
I'd like to keep common base settings together.
If you add base preset like (CMakePresetsBase.json)
{
"version": 4,
"configurePresets": [
{
"name": "Linux-CPP-only-toolset-configure",
"hidden": true,
"generator": "Unix Makefiles",
"binaryDir": "${sourceDir}/build/${generator}/${presetName}",
"environment":
",
"CXX": "g++",
"CC": "gcc"
}
}
],
"buildPresets": [
{
"name": "Linux-CPP-only-toolset-build",
"hidden": true,
"verbose": true,
"jobs": 4,
"environment":
",
"CXX": "g++",
"CC": "gcc"
}
}
]
}
And then try include this file and try to inherit from these presets - following settings will be lost:
- environment
- binary dir
- generator
- verbose
- jobs
...
Basically you will lose everything.
Command line calls of cmake work as expected.
cmake --preset=Release
cmake --build --preset=Release
- relates to
-
QTCREATORBUG-28893 CMakePresets.json : macros are not evaluated in the context of the preset used
-
- Closed
-
-
QTCREATORBUG-24555
CMake Project Manager: Support presets functionality
-
- Closed
-